# mdview

./: .gitignore  Cargo.toml  README.md  build.rs  fix-blank-page-conclusion.md  install-linux-mime.sh  installer.nsi  linux-port-notes.md  tailwind.config.js
.github/workflows/: release.yml
csrc/libyaml/: LICENSE
csrc/md4x/: LICENSE
csrc/md4x/renderers/: md4x-html.c  md4x-props.h
src/: config.rs  editor.rs  fonts.rs  main.rs  md4x.rs  registry.rs  renderer.rs  server.rs  watcher.rs  webview2.rs
src/i18n/: mod.rs
static/: mdview.desktop  style.css
